Upgrade project to use `Spring Boot 3.3.x` using openrewrite.